completes bed datagen